--- a/Presentation.WpfApp/MainWindow.xaml
+++ b/Presentation.WpfApp/MainWindow.xaml
@@ -32,6 +32,9 @@
                 <DataTemplate DataType="{x:Type viewmodels:ProductListViewModel}">
                     <views:ProductListView />
                 </DataTemplate>
+                <DataTemplate DataType="{x:Type viewmodels:NotificationViewModel}">
+                    <views:NotificationView />
+                </DataTemplate>
             </ContentControl.Resources>
         </ContentControl>
     </Grid>
